--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="enter_name_nickname">Enter name / nickname</string>
     <string name="your_profile">Your Profile</string>
     <string name="enter_sex">Enter sex</string>
+    <string name="take_a_picture">Take A Picture</string>
 </resources>
